--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,17 @@
             </div>
           </li>
           <li class="portfolio-item">
-            <img class="portfolio-img" src="./images/portfolio-img-2.jpg" alt="Portfolio img" width="360"
-              height="300" />
+            <div class="portfolio-list-img-wrap">
+              <img class="portfolio-img" src="./images/portfolio-img-2.jpg" alt="Portfolio img" width="360"
+                height="300" />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+                
+              </p>
+            </div>
+
             <div class="portfolio-box-container">
               <h3 class="porfolio-title">Cashless Payment</h3>
               <p class="portfolio-subtitle">Marketing</p>
@@ -156,22 +165,26 @@
       <div class="footer-wrap">
         <h3 class="footer-title">Social media</h3>
         <ul class="footer-soc-list list">
-          <li class="footer-soc-item"><a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24"
-                height="24">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24" height="24">
                 <use href="./images/sprite.svg#icon-instagram"></use>
-              </svg></a></li>
-          <li class="footer-soc-item"><a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24"
-                height="24">
+              </svg></a>
+          </li>
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24" height="24">
                 <use href="./images/sprite.svg#icon-twitter"></use>
-              </svg></a></li>
-          <li class="footer-soc-item"><a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24"
-                height="24">
+              </svg></a>
+          </li>
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24" height="24">
                 <use href="./images/sprite.svg#icon-facebook"></use>
-              </svg></a></li>
-          <li class="footer-soc-item"><a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24"
-                height="24">
+              </svg></a>
+          </li>
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link"><svg class="footer-soc-icon" wigth="24" height="24">
                 <use href="./images/sprite.svg#icon-linkedin"></use>
-              </svg></a></li>
+              </svg></a>
+          </li>
         </ul>
       </div>
     </div>
