--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
   <!-- BACKDROP -->
   <div class="backdrop" data-modal>
     <div class="modal">
-      <p class="title-for">Leave your contacts and we will call you back</p>
       <form class="contact-form">
+        <p class="title-form">Leave your contacts and we will call you back</p>
         <label class="contact-form-title">
           Name
           <div class="contact-form-input-wrap">
