--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <!-- HEADER -->
 <header class="header">
@@ -359,7 +356,7 @@
           </div>
         </label>
         <label class="contact-form-title">Comment
-          <textarea name="user-message" id="" cols="" rows="" class="contac-form-message"
+          <textarea name="user-message" class="contac-form-message"
             placeholder="Text input"></textarea>
         </label>
           <input id="user_policy" type="checkbox" name="usr_policy" class="term-form-input visually-hidden" required />
